@@ -3,10 +3,10 @@
     </head>
     <body>
 	<A HREF="http://cnn.com/">CNN</A>
-	<A HREF="http://a.cpan.org/">CPAN</A>
-	<A HREF="http://b.cpan.org/">CPAN</A>
-	<A HREF="http://c.cpan.org/">CPAN</A>
-	<A HREF="http://d.cpan.org/">CPAN</A>
+	<A HREF="http://a.cpan.org/">CPAN A</A>
+	<A HREF="http://b.cpan.org/">CPAN B</A>
+	<A HREF="http://c.cpan.org/" NAME="bongo">CPAN C</A>
+	<A HREF="http://d.cpan.org/">CPAN D</A>
     </body>
 </html>
 
